# pokemon-battle-vision-lab

./: .gitignore  AGENTS.md  README.md  pyproject.toml
architecture/: domain_principles.md  evidence_model.md
configs/: roi_2868x1320.json  roi_2868x1320_v2.json
docs/: apple_vision_runtime_recovery.md  checkpoint1a_architecture.md  checkpoint1a_implementation_report.md  checkpoint1b_architecture.md  checkpoint1b_battle_text_recall.md  checkpoint1b_review_guide.md  checkpoint1c_architecture.md  checkpoint1c_review_guide.md  checkpoint1d1_quality_audit.md  checkpoint1d_architecture.md  checkpoint1e_architecture.md  checkpoint1e_architecture_audit.md  checkpoint1f_architecture.md  checkpoint1f_architecture_audit.md  checkpoint1g_1h_milestone_hygiene.md  checkpoint1g_architecture.md  checkpoint1g_architecture_audit.md  checkpoint1h_architecture.md  checkpoint1i_acceptance_report.md  checkpoint1i_architecture.md  checkpoint1j_acceptance_report.md  checkpoint1j_architecture.md  milestone1_acceptance.md  selected_four_roi_correction.md
plans/: checkpoint1h.md  checkpoint1i.md  checkpoint1j.md
references/: approved_upstream_metadata_drift.json  battle_text_human_review_round1.json  checkpoint1c_initial_evaluation.json  checkpoint1d1_parser_regression.json  checkpoint1d1_quality_audit.json  trigger_notification_human_review_round1.json  win01_known_frames.json  win01_match_reference.json
schemas/: annotation.schema.json  approved_upstream_metadata_drift.schema.json  battle_event.schema.json  battle_state_snapshots.schema.json  battle_text_diagnostic.schema.json  (+65 more)
(+165 files in other folders)
